--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/cors": "^2.8.17",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.5",
     "eslint": "^9.14.0",
     "globals": "^15.14.0",
